@@ -40,6 +40,12 @@ class RemoteBpointTest < Test::Unit::TestCase
     assert_equal 'Approved', response.message
   end
 
+  def test_successful_purchase_with_more_options
+    response = @gateway.purchase(@amount, @credit_card, @options.merge({ crn1: 'ref'}))
+    assert_success response
+    assert_equal 'Approved', response.message
+  end
+
   def test_failed_purchase
     response = @gateway.purchase(@amount, @declined_card, @options)
     assert_failure response
